crates/uitest/fixtures/ty_check/pat/path.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: crates/uitest/fixtures/ty_check/pat/path.fe
---
error[8-0004]: expected unit variant
  ┌─ path.fe:7:13
  │
7 │     let x = Foo
  │             ^^^
  │             │
  │             expected unit variant here, but found struct
  │             Consider using `Foo { a, b }` instead


